--- a/css/style.css
+++ b/css/style.css
@@ -33,9 +33,12 @@ p {
 .sectionTitle {
   border: 1px solid black;
   height: 25px;
+  width: 25%;
   padding: 0px;
   float: none;
-  
+  position: relative;
+  top: 0;
+  right: 0;
 }
 
 .title {
@@ -43,10 +46,6 @@ p {
   font-size: 20px;
   text-align: center;
   padding: 0px;
-  position: relative;
-  top: 0;
-  right: 0;
-
 }
 
 .section {
