--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,9 @@ p {
   font-weight: bold;
   font-size: 20px;
   text-align: center;
+  position: relative;
+  top: 0;
+  right: 0;
   padding: 0px;
 }
 
