--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,7 @@ p {
 .sectionTitle {
   border: 1px solid black;
   height: 25px;
-  width: 25%;
+  width: 100px;
   padding: 0px;
   position: relative;
   top: 0;
