--- a/css/style.css
+++ b/css/style.css
@@ -40,8 +40,8 @@ p {
   padding: 0px;
   width: 100px;
   position: absolute;
-  top: 0;
-  right: 0;
+  top: 10px;
+  right: 10px;
   float: none;
   
 }
