--- a/css/style.css
+++ b/css/style.css
@@ -51,8 +51,8 @@ p {
   font-size: 20px;
   text-align: center;
   position: relative;
-  top: 0;
-  right: 0;
+  top: 10px;
+  right: 10px;
   padding: 0px;
 }
 
