--- a/css/style.css
+++ b/css/style.css
@@ -79,7 +79,7 @@ p {
   }
 }
 
-@media (min-width: 768px and max-width: 991px) {
+@media (min-width: 768px) and (max-width: 991px) {
   .wrapper {
     width: 50%;
   }
