--- a/mod2_solution/css/style.css
+++ b/mod2_solution/css/style.css
@@ -11,21 +11,27 @@ h1 {
   text-align: center;
 }
 
-div {
-  border: 1px solid black;
-  width: 33.33%;
-  margin: auto;
-  float: left;
-  background-color: gray;
-}
-
 p {
   padding: 10px;
 }
 
-.container {
+.wrapper {
+  padding: 10px;
+  width: 33.33%;
   position: relative;
-  margin: 10px;
+  float: left;
+}
+
+.container {
+  border: 1px solid black;
+  background-color: gray;
+}
+
+.titleContainer{
+  border: none;
+  float: none;
+  height: 25px;
+  postion: relative;
 }
 
 .sectionTitle {
@@ -33,23 +39,26 @@ p {
   height: 25px;
   padding: 0px;
   width: 100px;
-  float: none;
   position: absolute;
-  top: 0;
-  right: 0;
+  top: 10px;
+  right: 10px;
+  float: none;
+  
 }
 
 .title {
   font-weight: bold;
   font-size: 20px;
   text-align: center;
+  position: relative;
+  top: 0px;
+  right: 0px;
   padding: 0px;
-
 }
 
 .section {
   position: relative;
-  top: 20px;
+  top: 0px;
 }
 
 #title_1 {
@@ -65,23 +74,24 @@ p {
 }
 
 @media (min-width: 992px) {
-  .container {
+  .wrapper {
     width: 33.33%;
   }
 }
 
-@media (min-width: 768px and max-width: 991px) {
-  .container {
+@media (min-width: 768px) and (max-width: 991px) {
+  .wrapper {
     width: 50%;
   }
 
   #section_3 {
     width: 100%;
+    clear: both;
   }
 }
 
 @media (max-width: 767px) {
-  .container {
+  .wrapper {
     width: 100%;
   }
 }
