--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ ul{
   text-align: center;
   font-size: 1.3em;
   font-weight: bold;
-  background-color: lightblue;
+  background-color: lightgray;
 }
 #nav-list{
   margin-top: 0px;
